@@ -53,6 +53,18 @@ import|;
 end_import
 
 begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|fail
+import|;
+end_import
+
+begin_import
 import|import
 name|java
 operator|.
@@ -728,6 +740,121 @@ name|toShort
 argument_list|()
 argument_list|)
 expr_stmt|;
+comment|// Test 5 - equivalent valid umask
+name|conf
+operator|=
+operator|new
+name|Configuration
+argument_list|()
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|FsPermission
+operator|.
+name|UMASK_LABEL
+argument_list|,
+literal|"0022"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|18
+argument_list|,
+name|FsPermission
+operator|.
+name|getUMask
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|toShort
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Test 6 - invalid umask
+name|conf
+operator|=
+operator|new
+name|Configuration
+argument_list|()
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|FsPermission
+operator|.
+name|UMASK_LABEL
+argument_list|,
+literal|"1222"
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|FsPermission
+operator|.
+name|getUMask
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"expect IllegalArgumentException happen"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+comment|//pass, exception successfully trigger
+block|}
+comment|// Test 7 - invalid umask
+name|conf
+operator|=
+operator|new
+name|Configuration
+argument_list|()
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|FsPermission
+operator|.
+name|UMASK_LABEL
+argument_list|,
+literal|"01222"
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|FsPermission
+operator|.
+name|getUMask
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"expect IllegalArgumentException happen"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+comment|//pass, exception successfully trigger
+block|}
 block|}
 annotation|@
 name|Test
